--- a/BPMM_App/BPMM_App.Windows/MainPage.xaml
+++ b/BPMM_App/BPMM_App.Windows/MainPage.xaml
@@ -59,8 +59,11 @@
                 <Image x:Name="ruleIcon" Source="Assets/social-003_twitter.png" ToolTipService.ToolTip="Business Rule"/>
                 <Image x:Name="influencerIcon" Source="Assets/social-003_twitter.png" ToolTipService.ToolTip="Influencer"/>
                 <Image x:Name="assessmentIcon" Source="Assets/social-003_twitter.png" ToolTipService.ToolTip="Assessment"/>
+                <Image x:Name="association" Source="Assets/social-003_twitter.png" ToolTipService.ToolTip="Association"/>
             </ListView>
-            <Canvas Grid.Column="1" x:Name="workspace" Background="Beige" AllowDrop="True" Drop="StackPanel_Drop"/>
+            <Canvas Grid.Column="1" x:Name="workspace" Background="Beige" AllowDrop="True"
+                    Drop="StackPanel_Drop" PointerMoved="workspace_PointerMoved" PointerReleased="workspace_PointerReleased"/>
         </Grid>
     </Grid>
 </Page>
+    
