--- a/BPMM_App/BPMM_App.Windows/BPMM_Controls/BPMMControl.xaml
+++ b/BPMM_App/BPMM_App.Windows/BPMM_Controls/BPMMControl.xaml
@@ -19,7 +19,8 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="10"/>
                     <RowDefinition Height="2*"/>
-                    <RowDefinition Height="8*"/>
+                    <RowDefinition Height="6*"/>
+                    <RowDefinition Height="2*"/>
                     <RowDefinition Height="10"/>
                 </Grid.RowDefinitions>
                 <Thumb x:Name="ThumbTopRight" Grid.Row="0" Background="White" Height="10" Width="10"  HorizontalAlignment="Right" DragDelta="ThumbTopRight_DragDelta" PointerReleased="Thumb_PointerReleased" />
@@ -27,9 +28,11 @@
 
                 <TextBox x:Name="header" Grid.Row="1" Text="{Binding Path=Title, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" AcceptsReturn="True" Margin="10,0,10,5" />
                 <TextBox x:Name="description" Grid.Row="2" Text="{Binding Path=Description, Mode=TwoWay}" PlaceholderText="description" TextWrapping="Wrap" AcceptsReturn="True" Margin="10,0" />
+                
+                <ComboBox x:Name="stateCombo" Grid.Row="3" ItemsSource="{Binding Path=States}" SelectedItem="{Binding Path=DefaultState}" Margin="10, 4, 10, 0" />
 
-                <Thumb x:Name="ThumbBottomRight" Grid.Row="3" Background="White" Height="10" Width="10" HorizontalAlignment="Right" DragDelta="ThumbBottomRight_DragDelta" PointerReleased="Thumb_PointerReleased" />
-                <Thumb x:Name="ThumbBottomLeft" Grid.Row="3" Background="White" Height="10" Width="10" HorizontalAlignment="Left" DragDelta="ThumbBottomLeft_DragDelta" PointerReleased="Thumb_PointerReleased" />
+                <Thumb x:Name="ThumbBottomRight" Grid.Row="4" Background="White" Height="10" Width="10" HorizontalAlignment="Right" DragDelta="ThumbBottomRight_DragDelta" PointerReleased="Thumb_PointerReleased" />
+                <Thumb x:Name="ThumbBottomLeft" Grid.Row="4" Background="White" Height="10" Width="10" HorizontalAlignment="Left" DragDelta="ThumbBottomLeft_DragDelta" PointerReleased="Thumb_PointerReleased" />
             </Grid>
             <Rectangle x:Name="anchor" x:FieldModifier="public" Grid.Column="1" VerticalAlignment="Top" Height="15" Width="15" Canvas.Left="200" Stroke="Black" Fill="White" PointerPressed="anchor_PointerPressed"/>
 
