--- a/BPMM_App/BPMM_App.Windows/BPMM_Controls/BPMMControl.xaml
+++ b/BPMM_App/BPMM_App.Windows/BPMM_Controls/BPMMControl.xaml
@@ -15,7 +15,7 @@
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Grid x:Name="bpmmObject" Grid.Column="0" Width="200" Height="200" Background="Aquamarine" ManipulationMode="All" ManipulationDelta="UserControl_ManipulationDelta">
+            <Grid x:Name="bpmmObject" Grid.Column="0" Width="200" Height="200" Background="LightBlue" ManipulationMode="All" ManipulationDelta="UserControl_ManipulationDelta">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="10"/>
                     <RowDefinition Height="2*"/>
