--- a/BPMM_App/BPMM_App.Windows/BPMM_Controls/Association.xaml
+++ b/BPMM_App/BPMM_App.Windows/BPMM_Controls/Association.xaml
@@ -8,7 +8,11 @@
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400"
-    >
+    KeyUp="UserControl_KeyUp"
+    IsTapEnabled="True"
+    Tapped="UserControl_Tapped"
+    RightTapped="UserControl_RightTapped">
+    
     <Canvas>
         <TextBox x:Name="descriptionBox" MaxHeight="1" VerticalAlignment="Bottom" HorizontalAlignment="Center" PlaceholderText="{Binding Path=Description}" TextWrapping="Wrap"/>
         <Polyline x:Name="line" Stroke="Black" Points="{Binding Path=Points}" />
