--- a/BPMM_App/BPMM_App.Windows/MainPage.xaml
+++ b/BPMM_App/BPMM_App.Windows/MainPage.xaml
@@ -87,6 +87,11 @@
                     Drop="StackPanel_Drop" PointerPressed="workspace_PointerPressed" PointerMoved="workspace_PointerMoved" PointerReleased="workspace_PointerReleased"/>
             
             <Grid x:Name="warnings_grid" Grid.Column="1" VerticalAlignment="Bottom">
+                <Grid.Resources>
+                    <Style TargetType="ListViewItem" x:Key="itemStyle">
+                        <Setter Property="Height" Value="30"/>
+                    </Style>
+                </Grid.Resources>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="30"/>
                     <RowDefinition Height="*"/>
@@ -99,13 +104,11 @@
                         ManipulationDelta="warnings_tab_ManipulationDelta" ManipulationMode="TranslateY">
                     <TextBlock Style="{StaticResource TitleTextBlockStyle}" HorizontalAlignment="Left" Margin="10, 0">Warnings</TextBlock>
                     <SymbolIcon x:Name="minimize_button" Symbol="Sort" HorizontalAlignment="Right" Margin="10, 0" Tapped="minimize_button_Tapped"/>
-                    <SymbolIcon x:Name="validate_button" Symbol="Refresh" HorizontalAlignment="Right" Margin="50, 0" Tapped="validate_button_Tapped"/>
                 </Grid>
-                <ScrollViewer x:Name="warnings_scrollview" Grid.Row="1" Grid.ColumnSpan="2" BorderBrush="Aqua" BorderThickness="3" Background="WhiteSmoke"
-                              HorizontalScrollMode="Auto" HorizontalScrollBarVisibility="Auto">
-                    <ListView x:Name="warnings_listview" ItemsSource="{Binding Path=Warnings, Mode=TwoWay}" SelectionChanged="warnings_listview_SelectionChanged">
-                    </ListView>
-                </ScrollViewer>
+
+                <ListView x:Name="warnings_listview" Grid.Row="1" Grid.ColumnSpan="2" BorderBrush="Aqua" BorderThickness="3" Background="WhiteSmoke" ItemContainerStyle="{StaticResource itemStyle}" ItemsSource="{Binding Path=Warnings, Mode=TwoWay}" SelectionChanged="warnings_listview_SelectionChanged">
+                    <ScrollViewer HorizontalScrollMode="Auto" HorizontalScrollBarVisibility="Auto"/>
+                </ListView>
             </Grid>
         </Grid>
     </Grid>
