--- a/BPMM_App/BPMM_App.Windows/BPMM_Controls/Link.xaml
+++ b/BPMM_App/BPMM_App.Windows/BPMM_Controls/Link.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="BPMM_App.AssociationControl"
+    x:Class="BPMM_App.Link"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:BPMM_App"
