Added descriptive placeholder texts. Improved event handling of controls. Fixed a regression for vanished comboboxes in derived controls.

--- a/BPMM_App/BPMM_App.Windows/BPMM_Controls/Link.xaml
+++ b/BPMM_App/BPMM_App.Windows/BPMM_Controls/Link.xaml
@@ -15,6 +15,6 @@
     
     <Canvas>
         <TextBox x:Name="descriptionBox" VerticalAlignment="Bottom" HorizontalAlignment="Center" Text="{Binding Path=Description, Mode=TwoWay}" TextWrapping="Wrap"/>
-        <Polyline x:Name="line" Stroke="Black" Points="{Binding Path=Points}" />
+        <Polyline x:Name="line" Stroke="White" Points="{Binding Path=Points}" />
     </Canvas>
 </UserControl>
