--- a/BMM_App/BMM_App.Windows/Models/WarningItem.xaml
+++ b/BMM_App/BMM_App.Windows/Models/WarningItem.xaml
@@ -1,8 +1,8 @@
 ﻿<UserControl
-    x:Class="BPMM_App.WarningItem"
+    x:Class="BMM_App.WarningItem"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:BPMM_App.BPMM_Controls"
+    xmlns:local="using:BMM_App.BPMM_Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
